Changelog 0.1.48:
Fixed Marking As Watched not updating local trakt records
Meta requests now run in a queue to throttle thread creation
Fixed season_count not being checked in local trakt database
Added more info label cleanups
Added TotalSeasons to item properties
Fixed spelling of UnWatchedEpisodes item property

Changelog 0.1.47:
Removed thread stack size changes (possibly causing Kodi crashes)

Changelog 0.1.46:
Fixed Movies not correctly marked as watched
Movies Collection now pulled from local database instead of Trakt call

Changelog 0.1.45:
Added Years menu item to shows
Added Background Task Style scrape display option
Fixed source utils deaccent function
Added Re-Build Trakt Datbase menu item

Changelog 0.1.44:
Trakt Sync Database now integrated
Duplicate source removal now performed using dictionary of hashes and urls
Real Debrid cache checks are now threaded to increase cache check speeds
Fixed Hide SD causing only SD to show
Torrents from local database now show original provider name
Fixed temporary provider files not being cleaned up on zip install
Added new My Files menu, allows browsing and playback of cloud stored files
Fixed Trakt Bookmarks

Changelog 0.1.43:
Fixed trakt scrobbling on item start
Slowest 5 providers now show their names on scraping screen
Missing season posters now fall back to show poster

Changelog 0.1.42
Fixed issue with movies creating transfer requests for premiumize users
Fixed lists throwing error when no liked lists were found
Fixed watched episodes showing in Next Up
Fixed issue with trakt scrobbling on item finish

Changelog 0.1.41
Fixed Fanart pulling items with wrong language
Fixed Scrobbling (again)

Changelog 0.1.40:
Fixed My Movies List Menu Item
Fixed display of individual providers in dialog
Increased Premiumize movie detection
Fixed Trakt Scrobbling
Fixed issue error caused on player skip
Fixed Search History not showing from main menu search
Fixed Search History sorting
Fixed error on torrent sizes if size is 0