@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.seren" version="0.1.49" name="Seren" provider-name="Nixgates">
+<addon id="plugin.video.seren" version="0.1.50" name="Seren" provider-name="Nixgates">
 	<requires>
 		<import addon="xbmc.python" version="2.19.0" />
 		<import addon="script.module.requests" version="2.19.1" />
@@ -27,7 +27,9 @@
 			<fanart>temp-fanart.png</fanart>
 		</assets>
 		<news>
-			
+Changelog 0.1.50:
+Fixed UnWatchedEpisodes list item property for seasons
+
 Changelog 0.1.49:
 Fixed Movie Collection Sorting
 Fixed shows get_season_episodes falling back to episode update
